# shelby

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
.devcontainer/: devcontainer.json
.github/workflows/: deployment.yml  tests.yml
assets/: dashboard.html
shelby_backend/: Cargo.toml
shelby_backend/src/: database.rs  document.rs  error.rs  lib.rs  person.rs  user.rs
shelby_backend/src/database/: error.rs  macros.rs  mod.rs  primary_key.rs  record.rs  sqlite.rs  traits.rs
shelby_backend/src/user/: mod.rs  password_hash.rs
shelby_backend/src/util/: date.rs  mod.rs  pagination.rs
src/: auth.rs  config.rs  error.rs  main.rs
src/backend/: document.rs  mod.rs  person.rs
src/backend/accounting/: account_summary.rs  accounts.rs  category.rs  cost_center.rs  entry.rs  mod.rs
src/backend/database/: error.rs  macros.rs  mod.rs  primary_key.rs  record.rs  sqlite.rs  traits.rs
src/backend/user/: mod.rs  password_hash.rs
src/backend/util/: date.rs  mod.rs  pagination.rs
src/frontend/: form_renderer.rs  mod.rs  table_renderer.rs  tests.rs  util.rs
src/frontend/form_renderer/: field.rs  insertable_database_entry.rs  mod.rs  util.rs
src/frontend/forms/: field.rs  insertable_database_entry.rs  mod.rs
src/frontend/overviews/: mod.rs
src/frontend/tables/: mod.rs
src/util/: expected_file_type.rs  flexible_input.rs  mod.rs  pdf_output.rs
templates/: base.html.tera  dashboard.html.tera  error.html.tera  form.html.tera  group.tera  login.html.tera  table.html.tera
