
[package]
name = "shelby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shelby_backend = { path = "shelby_backend" }
rocket = { version = "0.5", features = ["json"] }
paste = "1.0"

[workspace]
members = ["shelby_backend"]
