[package]
name = "shelby_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.30", features = ["bundled", "chrono", "blob"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
paste = "1.0"
concat-with = "0.2"
ring = "0.17"
rusqlite_migration = "1.1.0"
const_format = "0.2"
